# blickfeld-scanner-lib

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  blickfeld-license.tmpl  commit_msg.txt  cross-compile-from-linux-aarch64.cmake  design-notes.org  environment.yml
.ci/: .gitlab-ci.yml  artifacts.yml  upload_release_artifacts.py
cmake/: blickfeld-scanner-config.cmake
doc/: CHANGELOG.md  README.md  cpp_examples.rst_tmp  error_handling.md  example.rst_tmp  examples_cpp.rst  examples_python.rst  file_format.rst  getting_started.rst  install.rst  markdown_bf.tmpl  protobuf_protocol.md  python_blickfeld_scanner.rst  python_discover.rst  python_examples.rst  python_point_cloud_stream.rst  python_raw_stream.rst  python_scanner.rst  python_status_stream.rst
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/async_fetch_clouds/: CMakeLists.txt  README.md  main.cpp
examples/cpp/configurable_point_cloud_stream/: CMakeLists.txt  main.cpp
examples/cpp/error_handling/: CMakeLists.txt  README.md  main.cpp
examples/cpp/fetch_clouds/: CMakeLists.txt  README.md  main.cpp
examples/cpp/fetch_imu/: CMakeLists.txt  README.md  main.cpp
examples/cpp/named_scan_pattern/: CMakeLists.txt  README.md  main.cpp
examples/cpp/read_from_file/: CMakeLists.txt  README.md  main.cpp
examples/cpp/reduced_clouds/: CMakeLists.txt  README.md  main.cpp
examples/cpp/server/: CMakeLists.txt  README.md  main.cpp
examples/cpp/set_scan_pattern/: CMakeLists.txt  README.md  main.cpp
examples/cpp/ssl/: CMakeLists.txt  README.md  main.cpp
examples/cpp/time_synchronization/: CMakeLists.txt  README.md  main.cpp
examples/cpp_standalone/: CMakeLists.txt
examples/cpp_standalone/discover/: CMakeLists.txt  README.md  main.cpp
examples/cpp_standalone/fetch_clouds/: CMakeLists.txt  README.md  main.cpp
examples/python/: configure_point_cloud_stream.py  fetch_imu.py  fetch_point_cloud.py  getting_started_example.py  ntp_several_lidar_synchronization.py  numpy_frame.py  read_point_cloud_file.py  sync.py  time_synchronization.py
examples/python/calibrate_accelerometer/: README.md  calibrate_accelerometer.py
examples/python/configure_point_cloud_stream/: README.md
examples/python/custom_trigger/: README.md  custom_trigger.py
examples/python/error_handling/: README.md  error_handling.py
examples/python/export_to_matlab/: README.md  display_mat.m  export_mat.py
examples/python/fetch_imu/: README.md
examples/python/fetch_point_cloud/: README.md
examples/python/getting_started_example/: README.md  getting_started_example.py
examples/python/ntp_several_lidar_synchronization/: README.md
examples/python/numpy_frame/: README.md
examples/python/read_point_cloud_file/: README.md
examples/python/record_point_cloud/: README.md  record_point_cloud.py
examples/python/set_algorithms/: README.md  set_algorithms.py
examples/python/store_and_set_named_scan_pattern/: README.md  store_and_set_named_scan_pattern.py
examples/python/time_synchronization/: README.md
include/blickfeld/: data.h  discover.h  exception.h  imu_stream.h  logged_object.h  mockup_server.h  point_cloud_stream.h  protocol_exception.h  scanner-config.h.in  scanner.h  string_utils.h  utils.h
npm/: CMakeLists.txt  index.ts  package.json  tsconfig.json
protocol/: CMakeLists.txt
protocol/blickfeld/: common.proto  connection.proto  error.proto  options.proto
protocol/blickfeld/config/: advanced.proto  algorithm.proto  generate.proto  named_scan_pattern.proto  product.proto  scan_pattern.proto  secure.proto
protocol/blickfeld/data/: algorithm.proto  frame.proto  imu.proto  point.proto  point_cloud.proto  scanline.proto
protocol/blickfeld/file/: general.proto  point_cloud.proto
protocol/blickfeld/status/: imu.proto  main.proto  scanner.proto  server.proto  temperature.proto  time_synchronization.proto
protocol/blickfeld/stream/: connection.proto  event.proto
protocol/blickfeld/update/: hardware.proto  manifest.proto
protocol/plugin/: CMakeLists.txt  bf_protobuf_plugin.cpp  bf_protobuf_plugin.h
protocol/plugin/blickfeld/: error.custom.pb.h
python/: CMakeLists.txt  build.sh  fix_protobuf_imports.py  meta.yaml  requirements.txt  setup.py.in  version.py.in
python/blickfeld_scanner/: __init__.py  discover.py  scanner.py
python/blickfeld_scanner/protocol/config/: __init__.py
python/blickfeld_scanner/stream/: __init__.py  imu.py  point_cloud.py  raw.py  status.py
python/tests/: test_file.py  test_import.py
src/: asio.h  connection.cpp  connection.h  discover.cpp  discover_impl.hpp  exception.cpp  imu_stream.cpp  logged_object.cpp  mockup_server.cpp  mockup_session.cpp  mockup_session.h  point_cloud_record.cpp  point_cloud_record.h  point_cloud_stream.cpp  scanner.cpp  scanner_connection.cpp  scanner_connection.h  simulated_connection.cpp  simulated_connection.h  socket_wrapper.h  string_utils.cpp  utils.cpp
tests/: CMakeLists.txt  gcovr.cfg  test-logging.cpp
tests/assets/: dump.bfpc
tests/src/: blickfeld_test.h  exceptions.cpp  file.cpp  main.cpp  simulated_connection.cpp  simulated_connection.h
